@@ -1,3 +1,13 @@
+2004-12-09  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* archures.c: Define bfd_mach_mips9000.
+	* elfxx-mips.c (_bfd_elf_mips_mach): Handle E_MIPS_MACH_9000.
+	(mips_set_isa_flags): Handle bfd_mach_mips9000.
+	* cpu-mips.c (I_mips9000): Define.
+	(arch_info_struct): Add case for bfd_mach_mips9000.
+	* aoutx.h (NAME(aout,machine_type)): Handle bfd_mach_mips9000.
+	* bfd-in2.h: Regenerate.
+
 2004-12-08  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	* elfxx-mips.c (mips_elf_calculate_relocation): Test for R_MIPS_26
